ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncConstructor_es5/input.ts.stderr
error: Constructor can't be an async function
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncConstructor_es5/input.ts:5:9
  |
5 |   async constructor() {
  |         ^^^^^^^^^^^

